# advent-of-code-2024

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
day-01/: Cargo.toml
day-02/: Cargo.toml
day-03/: Cargo.toml
day-04/: Cargo.toml
day-05/: Cargo.toml
day-06/: Cargo.toml
day-06/benches/: benchmark.rs
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: part1.rs
day-13/: Cargo.toml
day-13/src/: part1.rs
day-14/: Cargo.toml
day-14/src/: part1.rs
day-15/: Cargo.toml
day-15/src/: lib.rs  part1.rs
day-16/: Cargo.toml
day-16/src/: part1.rs
day-17/: Cargo.toml
day-17/src/: part1.rs  part2.rs
day-18/: Cargo.toml
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/src/: part1.rs  part2.rs
day-20/: Cargo.toml
day-20/src/: part1.rs  part2.rs
day-21/: Cargo.toml
day-21/src/: part1.rs  part2.rs
day-22/: Cargo.toml
day-22/src/: part1.rs  part2.rs
day-23/: Cargo.toml
day-23/src/: part1.rs
day-24/: Cargo.toml
day-24/src/: part1.rs
days-template/: Cargo.toml
days-template/src/: part1.rs
lib/: Cargo.toml
lib/src/: bench_macro.rs  combinations.rs  day_macro.rs  lib.rs  map.rs  maps.rs  print_timer.rs  test_macro.rs
lib/src/map/: direction.rs  flat_map.rs  map.rs
lib/src/maps/: direction.rs  flat_map.rs  map.rs  offset.rs  pos.rs
template/: Cargo.toml
