[workspace]
resolver = "2"

package.authors = ["AD4MANTIS"]
members = ["day-*"]

[workspace.lints.clippy]
enum_glob_use = "forbid"
pedantic = "forbid"
[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.dependencies]
lib = { path = "lib" }
thiserror = "2.0.4"
itertools = "0.13.0"
rayon = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release-with-symbols]
inherits = "release"
debug = true

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
